--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; URL='https://tmad4000.github.io/LiveLog/LiveLog1.3.htm'" />
+<meta http-equiv="refresh" content="0; URL='https://tmad4000.github.io/jsart/jsart2.htm'" />
